<?xml version="1.0"?>
<package format="3">
    <name>compressed_image_saver</name>
    <version>0.0.1</version>
    <description>
        download compressed images from a topic
    </description>
    <maintainer email="divinitist@outlook.com">Divinitist</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ros_environment</build_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
  
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>